fixato scrollbar laterale che scassava, ora manca un fix al problema mostrato in video

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,8 @@ body {
 
 #homeSection {
     background: black;
-    height: 100vh;
+    /*height: 100vh;*/
+
 }
 
 .primarySection. #homeSection {
@@ -119,4 +120,14 @@ body {
 .imgStore {
     height:30vh;
     width:75%;
+}
+
+.no_padding{
+    padding: 0 !important;
+}
+.no_margin{
+    margin: 0 !important;
+}
+.row{
+    margin-right: 0 !important;
 }
